--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: placeholder
+Package: DFO spatial Shiny app
 Type: ShinyApp 
-Date: 2021-02-11
+Date: 2021-02-15
 Title: BIO's Shiny Spatial App
 Version: 0.0.1.9000
 Authors@R: c(
