:art: show how to use geom from app

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Project-specific files 
 app/data/*
 !app/data/.gitkeep
+app/www/*.html
+!app/www/empty_report.html
 
 *.log
 app/output/*.geojson
