--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ app/www/*.html
 
 *.log
 app/output/report_SMR_EN_files/
+app/output/report_SMR_FR_files/
 app/output/*.geojson
 app/output/*.tex
 app/output/*.pdf
