remove test files from source control

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ app/output/*.rds
 app/output/*.Rmd
 tmp/
 renv/
-app/tests/temp/*
+app/tests/testthat/temp/*
 !app/tests/temp/.gitkeep
 
 # History files
