--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ app/data/*
 *.zip
 *.pdf
 *.png
+*.RDS
+# no uploading sensitive data.
 data.7z
 
 
@@ -31,6 +33,8 @@ renv/
 tests/temp/*
 tests/*.RData
 !tests/temp/.gitkeep
+hex_data/*.RDS
+hex_data/*.rda
 
 # History files
 .Rhistory
