--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -30,8 +30,10 @@ jobs:
             ${{ runner.os }}-renv-
 
       - name: Restore packages
-        run: Rscript |
+        run: |
           if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
           renv::restore()
+        shell: Rscript {0}
+        
       - name: Send end  greeting
         run: echo "Goodbye World"
