checkout repo in actions script

--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -18,6 +18,9 @@ jobs:
     env:
       RENV_PATHS_ROOT: ~/.local/share/renv
     steps:
+      - uses: actions/checkout@v2
+
+    
       - name: Send greeting
         run: echo "Hello World"
           
