--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -15,16 +15,39 @@ on:
 jobs:
   build-production:
     runs-on: ubuntu-latest
+    
     env:
+      # Root path used by renv and cached
       RENV_PATHS_ROOT: ~/.local/share/renv
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@v1
-      - uses: r-lib/actions/setup-renv@v1
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v1
+
+      - name: Cache R packages
+        uses: actions/cache@v2
         with:
-          cache-version: 2
-          
-          
+          path: ${{ env.RENV_PATHS_ROOT }}
+          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-renv-
+
+      - name: Install system dependencies
+        run: |
+          Rscript -e "install.packages('remotes')"
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu"))')
+
+      - name: Restore packages
+        run: |
+          renv::restore()
+        shell: Rscript {0}
+
       - name: Run opendata check
         run: source(here::here("dataprocessing/openDataGitScript.R")) 
         shell: Rscript {0}
