--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -27,9 +27,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       
       - name: install devtools
-        run: |
-          install.packages("devtools")
-        shell: RScript {0}
+        run: RScript install.packages("devtools")
       
       - uses: r-lib/actions/setup-renv@v1
         with:
