--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -27,7 +27,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       
       - name: install devtools
-        run: RScript install.packages("devtools")
+        run: |
+          install.packages("devtools")
+        shell: Rscript {0}
       
       - uses: r-lib/actions/setup-renv@v1
         with:
