--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -26,6 +26,10 @@ jobs:
     
       - uses: r-lib/actions/setup-r@v1
       
+      - name: Fix units R package install asdf
+        run: |
+          apt install libudunits2-dev
+      
       - name: install devtools
         run: |
           install.packages("devtools")
@@ -36,5 +40,8 @@ jobs:
           cache-version: 2
       
       - name: Run opendata check
-        run: RScript dataprocessing/openDataGitScript.R
+        run: |
+          dataprocessing/openDataGitScript.R
+        shell: Rscript {0}
+        
         
