--- a/.github/workflows/renvSetup.yml
+++ b/.github/workflows/renvSetup.yml
@@ -8,13 +8,15 @@ on:
       name:
         default: 'World'
         required: false
-  schedule:
-  - cron: "0 0 10 * *"
 
 jobs:
   setup_renv_check:
     runs-on: ubuntu-latest
- 
+    
+    env:
+      # Root path used by renv and cached
+      RENV_PATHS_ROOT: ~/.local/share/renv
+    
     steps:
       - uses: actions/checkout@v2
     
@@ -23,10 +25,18 @@ jobs:
     
       - uses: r-lib/actions/setup-r@v1
       
-      - name: Run opendata check
+      - name: Fix units R package install asdf
         run: |
-          install.packages("ckanr", "here", "dplyr")
-          source(here::here("dataprocessing/openDataGitScript.R"))
+          sudo apt install libudunits2-dev libgdal-dev
+      
+      - name: install devtools
+        run: |
+          install.packages("devtools")
         shell: Rscript {0}
-        
+      
+      - uses: r-lib/actions/setup-renv@v1
+        with:
+          cache-version: 2
+      
+
         
