reorder rmds, fix cron schedule, dump marfis/isdb plot

--- a/.github/workflows/opendataCheck.yml
+++ b/.github/workflows/opendataCheck.yml
@@ -9,7 +9,8 @@ on:
         default: 'World'
         required: false
   schedule:
-  - cron: "0 0 10 * *"
+  # run at 10am every wednesday
+  - cron: "0 10 * * 3"
 
 jobs:
   open_data_check:
