Add new module custom_report
This is required for v2 (see #5). All templates are now in /templates.
There are now two report tabs and main tab switch porperly. This commit
also use chrome_print() to print PDF (see #11).

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 app/data/*
 !app/data/.gitkeep
 app/www/*.html
+app/www/reports/*
+!app/www/reports/.gitkeep
 !app/www/empty_report.html
+
 
 *.log
 app/output/*.geojson
