Complete the list of dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ShinySptialApp
-Type: ShinyApp 
+Type: ShinyApp
 Date: 2022-02-23
 Title: BIO's Shiny Spatial App
 Version: 1.0.0.9000
@@ -7,20 +7,25 @@ Authors@R: c(
   person("inSileco Inc.", role = c("aut", "cre"), email = "info@inSileco.io"),
   )
 Imports:
-  ckanr
+  ckanr,
   cli,
   crayon,
   fs,
+  ggspatial,
   glue,
+  kableExtra,
   leaflet,
   leafem,
   mapedit,
   osmdata,
   sf,
-  shiny,
+  shiny (­­>=1.7.0),
   shinyjs,
   shinyvalidate,
   raster,
   rmarkdown,
+  rgbif,
+  robis,
+  tidyverse,
   whisker
 RoxygenNote: 7.1.1
