--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,28 +4,31 @@ Date: 2022-02-23
 Title: BIO's Shiny Spatial App
 Version: 1.0.0.9000
 Authors@R: c(
-  person("inSileco Inc.", role = c("aut", "cre"), email = "info@inSileco.io"),
+  person("inSileco Inc.", role = c("aut", "cre"), email = "info@inSileco.io")
   )
 Imports:
-  ckanr,
-  cli,
-  crayon,
-  fs,
-  ggspatial,
-  glue,
-  kableExtra,
-  leaflet,
-  leafem,
-  mapedit,
-  osmdata,
-  sf,
-  shiny (­­>=1.7.0),
-  shinyjs,
-  shinyvalidate,
-  raster,
-  rmarkdown,
-  rgbif,
-  robis,
-  tidyverse,
-  whisker
+    ckanr,
+    cli,
+    crayon,
+    dplyr,
+    fs,
+    ggspatial,
+    glue,
+    here,
+    kableExtra,
+    leaflet,
+    leafem,
+    mapedit,
+    osmdata,
+    sf,
+    shiny (>= 1.7),
+    shinyjs,
+    shinyvalidate,
+    raster,
+    rmarkdown,
+    rgbif,
+    robis,
+    tidyverse,
+    whisker,
+    bookdown
 RoxygenNote: 7.1.1
